src/test/ui/issues/issue-3099-b.stderr
error[E0428]: the name `a` is defined multiple times
  --> $DIR/issue-3099-b.rs:3:1
   |
LL | pub mod a {}
   | --------- previous definition of the module `a` here
LL | 
LL | pub mod a {}
   | ^^^^^^^^^ `a` redefined here
   |
   = note: `a` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
